Fixed Spacing on Homepage News Images

--- a/css/index.css
+++ b/css/index.css
@@ -167,6 +167,7 @@ section.featured.news .content .item {
 }
 
 section.featured.news .content .item .imageContainer {
+  width: 180pt;
   margin: 10pt 5pt 10pt 10pt;
   position: relative;
 }
